; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/cxl/extr_vphb.c_cxl_pci_to_afu.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/cxl/extr_vphb.c_cxl_pci_to_afu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cxl_afu = type { i32 }
%struct.pci_dev = type { i32 }
%struct.pci_controller = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cxl_afu* @cxl_pci_to_afu(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  %3 = alloca %struct.pci_controller*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %4 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %5 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.pci_controller* @pci_bus_to_host(i32 %6)
  store %struct.pci_controller* %7, %struct.pci_controller** %3, align 8
  %8 = load %struct.pci_controller*, %struct.pci_controller** %3, align 8
  %9 = getelementptr inbounds %struct.pci_controller, %struct.pci_controller* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.cxl_afu*
  ret %struct.cxl_afu* %11
}

declare dso_local %struct.pci_controller* @pci_bus_to_host(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
